blue-green-app/deploy/k8s-manifests/web-app/k8s-go-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-go-server-service
spec:
  selector:
    app: web-go-server
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: NodePort
