blue-green-app/deploy/k8s-manifests/web-app/k8s-go-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host-ingress-web
spec:
  ingressClassName: nginx
  rules:
  - host: web-foo.bar.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web-go-server-service
            port:
              number: 5000
